--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 body {
     margin: 60px auto;
     width: 70%;
+    /* We're working with the body tag, and so with the WHOLE page */
+
+    background-color: gray; /* The page background will be black */
+    color: black; /* The page text will be white */
+
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -46,6 +51,7 @@ ul.posts li {
     width: 300px
 }
 
+#contact
 * {
     box-sizing: border-box;
   }
