--- a/css/main.css
+++ b/css/main.css
@@ -6,20 +6,22 @@
     background-color: #0000000d;
   }
   #footer-container {
-    margin-top: 4em;
-    display: flex;
-    background: #343a40;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
     color: white;
-    flex-direction: column;
-    align-items: center;
-    height: 2em;
-    justify-content: center;
+    text-align: center;
   }
   #footer-content {
     font-size: 84%;
     margin-bottom: 0;
   }
   
+
+
+
   /* HOME */
   .container-custom {
     margin-top: 4em;
@@ -59,6 +61,9 @@
     color: #000000d6;
   }
   
+
+
+
   /* EXPERIENCE */
   .company-logo-container {
     display: flex;
@@ -96,6 +101,9 @@
     margin-bottom: 2em;
   }
   
+
+
+
   /* PROJECTS */
   .carousel-custom {
     width: 55em;
@@ -116,6 +124,9 @@
   .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%353535' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e")
   }
+
+
+
   /* DESKTOP */
   @media screen and (min-width: 992px) {
     .navbar-custom {
