--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,66 @@
-/* ALL*/
-* {
-    font-family: 'Roboto Slab', serif;
-  }
-  body {
-    background-color: #0000000d;
-  }
-  #footer-container {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
-    color: white;
-    text-align: center;
-  }
-  #footer-content {
-    font-size: 84%;
-    margin-bottom: 0;
+li{
+    list-style-type: none;
+    margin: 2vw 0;
+    
+    font-size: 3vh;
   }
   
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+  a{
     text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
     color: black;
+    font-family: monospace;
+  
+    padding: 2vw;
   }
   
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
+  nav{
+    width: 100vw;
+    background-color: #D6EFFF;
   }
   
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
+  ul{
+    display: block;
+    margin: 0;
+    padding: 0;
+    
+    display: flex;  
+  }
+  
+  body{
+    margin: 0;
+  }
+  
+  button{
     display: none;
   }
-
   
+  a:hover{
+    background-color: #C6E9FF;
+  }
+  
+  @media only screen and (max-width: 500px) {
+    ul{
+      flex-direction: column;
+    }
+    
+    a{
+      display: block;
+    }
+    
+    li{
+      margin: 0;
+    }
+    
+    button{
+      display: block;
+      
+      padding: 2vw;
+      font-size: 3vh;
+      background-color: #AFE0FF;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      
+      align-self: flex-start;
+    }
+  }
