--- a/style.css
+++ b/style.css
@@ -16,16 +16,17 @@ main {
 }
 
 header {
-    background-color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
+    background-color: gray;
     right: 0;
     height: 80px;
     display: flex;
     align-items: center;
     box-shadow: 0 0 25px 0 black;
-
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
 }
 
