--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ main {
 
 header {
     background-color: gray;
+    top: 0;
     right: 0;
     height: 80px;
     display: flex;
@@ -24,7 +25,6 @@ header {
     box-shadow: 0 0 25px 0 black;
     float: none;
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
