--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
 }
 
 header {
-    background-color: white;
+    background-color: powderblue;
     position: fixed;
     top: 0;
     left: 0;
