--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ header li a {
     background-color: #45a049;
   }
   
-  /* Style the container/contact section */
+  /* Style the container/contact section 
   .container {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 10px;
-  }
+  }*/
   
   /* Create two columns that float next to eachother */
   .column {
