--- a/style.css
+++ b/style.css
@@ -74,13 +74,13 @@ header li a {
     padding: 10px;
   }*/
   
-  /* Create two columns that float next to eachother */
+  /* Create two columns that float next to eachother 
   .column {
     float: left;
     width: 50%;
     margin-top: 6px;
     padding: 20px;
-  }
+  }*/
   
   /* Clear floats after the columns */
   .row:after {
