--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ header li a {
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
+body {background:rgb(150, 150, 201)68); }
 form { max-width:420px; margin:50px auto; }
 
 .feedback-input {
