--- a/style.css
+++ b/style.css
@@ -88,6 +88,13 @@ textarea {
 [type="submit"]:hover { background:#CC4949; }
 
 
-footer {
-    display: block;
+
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
   }
