--- a/style.css
+++ b/style.css
@@ -95,6 +95,6 @@ textarea {
     bottom: 0;
     width: 100%;
     background-color: red;
-    color: white;
+    color: black;
     text-align: center;
   }
