--- a/style.css
+++ b/style.css
@@ -98,3 +98,13 @@ textarea {
     color: black;
     text-align: center;
   }
+
+  hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+  }
