--- a/style.css
+++ b/style.css
@@ -127,3 +127,15 @@ textarea {
     height: 2em;
     margin-right: .7em;
   }
+
+  .column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
