--- a/style.css
+++ b/style.css
@@ -89,10 +89,19 @@ textarea {
 
 
 
-.footer {
-  position:static;
-  display:table-row;
-  height:100px; /* will still expand with larger content */
+#footer-container {
+  margin-top: 4em;
+  display: flex;
+  background: #343a40;
+  color: white;
+  flex-direction: column;
+  align-items: center;
+  height: 2em;
+  justify-content: center;
+}
+#footer-content {
+  font-size: 84%;
+  margin-bottom: 0;
 }
 
   hr {
