--- a/style.css
+++ b/style.css
@@ -147,3 +147,11 @@ textarea {
 .blog{
   background: cadetblue;
 }
+
+.image {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
