--- a/style.css
+++ b/style.css
@@ -155,3 +155,9 @@ textarea {
   margin-top: -50px;
   margin-left: -100px;
 }
+
+.wrapper {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
