--- a/style.css
+++ b/style.css
@@ -89,20 +89,6 @@ textarea {
 
 
 
-#footer-container {
-  margin-top: 4em;
-  display: flex;
-  background: #343a40;
-  color: white;
-  flex-direction: column;
-  align-items: center;
-  height: 2em;
-  justify-content: center;
-}
-#footer-content {
-  font-size: 84%;
-  margin-bottom: 0;
-}
 
   hr {
     display: block;
@@ -114,7 +100,7 @@ textarea {
     border-width: 1px;
   }
 
-  top img{
+  .img{
     border-radius: 20%;
   }
 
