--- a/style.css
+++ b/style.css
@@ -148,18 +148,17 @@ textarea {
 html, body {
   height: 100%;
 }
-.page-wrap {
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.content {
+  padding: 20px;
   min-height: 100%;
-  /* equal to footer height */
-  margin-bottom: -142px; 
+  margin: 0 auto -50px;
 }
-.page-wrap:after {
-  content: "";
-  display: block;
+.footer,
+.push {
+  height: 50px;
 }
-.site-footer, .page-wrap:after {
-  height: 142px; 
-}
-.site-footer {
-  background: orange;
-}
+
