--- a/style.css
+++ b/style.css
@@ -1,79 +1,164 @@
+header img {
+  height: 80px;
+  margin-left: 40px;
+}
 body {
-  font-size: 14px;
-  font-weight: 300;
-  font-family: 'Poppins', sans-serif;
-}
-.logo {
-padding-top: 20px;
-}
-.logo h2{
-  font-size: 18px;
-  text-transform: uppercase;
-  color: #fff;
-}
-.menu-area{
-  background: #000;
-}
-.main-menu ul{
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: right;
-}
-.main-menu ul li{
-  display: inline-block;
-  margin-left: 20px;
-}
-.main-menu ul li a{
-  display: block;
-  color: #fff;
-  padding: 20px 10px;
-}
-.main-menu ul li a:hover{
-  text-decoration: none;
-  color: yellow;
-}
-
-
-
-
-
-
-.header-area{
-  background: url(../images/me-bg.jpg);
-  min-height: 600px;
+  height: 125vh;
   background-size: cover;
-  background-position: center center;
+  font-family: sans-serif;
+  margin-top: 80px;
+  padding: 30px;
 }
-.header-text h1{
-  font-size: 100px;
-  color: #fff;
-  font-weight: 900;
+
+main {
+  color: white;
 }
-.header-text h2{
-  font-size: 20px;
-  color: #fff;
-  font-weight: 400;
-  margin: 0;
+
+header {
+  background-color: powderblue;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 25px 0 black;
 }
-.header-text a{
-  display: inline-block;
-  font-size: 14px;
-  color: #000;
-  font-weight: 400;
-  background: #fff;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  margin-top: 20px;
+
+header * {
+  display: inline;
 }
-.header-text a:hover{
-  background: yellow;
-  color: #000;
+
+header li {
+  margin: 20px;
+}
+
+header li a {
+  color: black;
   text-decoration: none;
 }
 
 
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+body {background:rgb(150, 150, 201)68); }
+form { max-width:420px; margin:50px auto; }
+
+.feedback-input {
+color:white;
+font-family: Helvetica, Arial, sans-serif;
+font-weight:500;
+font-size: 18px;
+border-radius: 5px;
+line-height: 22px;
+background-color: transparent;
+border:2px solid #CC6666;
+transition: all 0.3s;
+padding: 13px;
+margin-bottom: 15px;
+width:100%;
+box-sizing: border-box;
+outline:0;
+}
+
+.feedback-input:focus { border:2px solid #CC4949; }
+
+textarea {
+height: 150px;
+line-height: 150%;
+resize:vertical;
+}
+
+[type="submit"] {
+font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+width: 100%;
+background:#CC6666;
+border-radius:5px;
+border:0;
+cursor:pointer;
+color:white;
+font-size:24px;
+padding-top:10px;
+padding-bottom:10px;
+transition: all 0.3s;
+margin-top:-4px;
+font-weight:700;
+}
+[type="submit"]:hover { background:#CC4949; }
 
 
 
+
+hr {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+}
+
+.img{
+  border-radius: 20%;
+}
+
+.container-custom {
+  margin-top: 4em;
+}
+
+#about-me-heading {
+  font-weight: 600;
+}
+.about-me-word {
+  font-weight: 600;
+}
+.about-me-social-logo {
+  height: 2em;
+  margin-right: .7em;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.blog{
+background: cadetblue;
+}
+
+.image {
+position: fixed;
+top: 50%;
+left: 0%;
+margin-top: -50px;
+margin-left: -100px;
+}
+
+* {
+margin: 0;
+}
+html, body {
+height: 100%;
+}
+html, body {
+height: 100%;
+margin: 0;
+}
+.content {
+padding: 20px;
+min-height: 90%;
+margin: 0 auto -50px;
+}
+.footer,
+.push {
+height: 50px;
+}
 
