--- a/style.css
+++ b/style.css
@@ -49,3 +49,15 @@ header
   height: auto;
   float: left;
 }
+
+body
+{
+  font-family: monospace;
+}
+
+
+.row
+{
+  max-width: 1200px;
+  margin: auto;
+}
