--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h1
   color: white;
   text-transform: uppercase;
   font-size: 70px;
-  text-align: center;
+  text-align: justify;
   margin-top: 275px;
 }
 
@@ -104,6 +104,12 @@ h1
   font-family: "Roboto", sans-serif;
 }
 
+.btn-one:hover
+{
+  background-color: transparent;
+  transition: all 0.5s ease-in;
+
+}
 .btn-two
 {
   font-family: "Roboto", sans-serif;
