--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body
 {
   position: absolute;
   width:1200px;
-  margin-left: left 0px;
+  margin-left: 0px;
   margin-top: 0px
 }
 
@@ -75,7 +75,7 @@ h1
   color: white;
   text-transform: uppercase;
   font-size: 70px;
-  text-align: justify;
+  text-align: center;
   margin-top: 275px;
 }
 
@@ -107,7 +107,7 @@ h1
 .btn-one:hover
 {
   background-color: transparent;
-  transition: all 0.5s ease-in;
+  transition: all 0.1s ease-in;
 
 }
 .btn-two
@@ -117,5 +117,5 @@ h1
 
 .btn-two:hover{
   background-color: darkorange;
-  transition: all 0.5s ease-in;
+  transition: all 0.1s ease-in;
 }
