--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ header
   background-position: center;
 }
 
+.navbar-style
+{
+  box-shadow: 0 5px 10px #efefef;
+}
+
 .main-nav
 {
   float: right;
