--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ header
   box-shadow: 0 5px 10px #efefef;
 }
 
+.logo
+{
+  height: 48px;
+  padding: 2px 10px;
+}
+
 .main-nav
 {
   float: right;
