--- a/style.css
+++ b/style.css
@@ -23,6 +23,19 @@ header
   padding: 2px 10px;
 }
 
+.icon-bar
+{
+  background: darkorange;
+}
+
+li a
+{
+  color: #333;
+}
+
+
+
+
 .main-nav
 {
   float: right;
