--- a/style.css
+++ b/style.css
@@ -33,6 +33,69 @@ li a
   color: #333;
 }
 
+.big-text
+{
+  font-size: 52px;
+  margin: 20px 0;
+  color: darkorange;
+}
+
+
+a.btn
+{
+  margin: 30px 10px;
+  width: 150px;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+a.btn-first
+{
+  background-color: darkorange;
+  color: #ffff;
+}
+
+a.btn-second
+{
+  background: transparent;
+  border: 1px solid darkorange;
+  color: #333;
+}
+
+a.btn:hover
+{
+  background: darkorange;
+  border: none;
+  color: #fff;
+  box-shadow: 5px 5px 10px #999;
+  transition: 0.3s;
+}
+
+.banner-info, .banner-image
+{
+  margin: 30px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
