--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ a.btn-first:hover
 .experience-details-item {
   margin: 0;
   color: #464646;
+  font-size: 100%;
 }
 .experience-items-container {
   display: flex;
