--- a/style.css
+++ b/style.css
@@ -4,6 +4,66 @@
   padding: 0;
 }
 
+.container-custom {
+  margin-top: 4em;
+}
+
+#about-me-heading {
+  font-weight: 600;
+}
+.about-me-word {
+  font-weight: 600;
+}
+.about-me-social-logo {
+  height: 2em;
+  margin-right: .7em;
+}
+#about-me-horizontal-line {
+  border-bottom: 1px solid #000000b0;
+  margin-top: 4em;
+}
+#contact-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+#contact-form-header {
+  font-weight: 600;
+}
+#contact-form-button {
+  background: white;
+  border: 1px solid #0000003b;
+  border-radius: 5px;
+  width: 73%;
+  height: 2em;
+  width: 12em;
+  color: #000000d6;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .company {
   max-width:10%;
