--- a/style.css
+++ b/style.css
@@ -4,6 +4,26 @@
   padding: 0;
 }
 
+
+
+#footer-container {
+  margin-top: 4em;
+  display: flex;
+  background: #343a40;
+  color: white;
+  flex-direction: column;
+  align-items: center;
+  height: 2em;
+  justify-content: center;
+}
+#footer-content {
+  font-size: 84%;
+  margin-bottom: 0;
+}
+
+
+
+
 .container-custom {
   margin-top: 4em;
 }
