--- a/style.css
+++ b/style.css
@@ -1,339 +1,64 @@
-*
-{
-  margin: 0;
-  padding: 0;
+body {
+  font-family: Arial;
+  padding: 20px;
+  background: #f1f1f1;
 }
 
-
-
-#footer-container {
-  margin-top: 4em;
-  display: flex;
-  background: #343a40;
-  color: white;
-  flex-direction: column;
-  align-items: center;
-  height: 2em;
-  justify-content: center;
-}
-#footer-content {
-  font-size: 84%;
-  margin-bottom: 0;
-}
-
-
-
-
-.container-custom {
-  margin-top: 4em;
-}
-
-#about-me-heading {
-  font-weight: 600;
-}
-.about-me-word {
-  font-weight: 600;
-}
-.about-me-social-logo {
-  height: 2em;
-  margin-right: .7em;
-}
-#about-me-horizontal-line {
-  border-bottom: 1px solid #000000b0;
-  margin-top: 4em;
-}
-#contact-form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-#contact-form-header {
-  font-weight: 600;
-}
-#contact-form-button {
-  background: white;
-  border: 1px solid #0000003b;
-  border-radius: 5px;
-  width: 73%;
-  height: 2em;
-  width: 12em;
-  color: #000000d6;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.company {
-  max-width:10%;
-  height:auto;
-}
-
-.navbar-style
-{
-  box-shadow: 0 5px 10px #0a0606;
-}
-
-.navbar-nav {
-  float:none;
-  margin:0 auto;
-  display: block;
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  font-size: 40px;
   text-align: center;
-}
-
-.navbar-nav > li {
-  display: inline-block;
-  float:none;
-}
-
-.logo
-{
-  height: 48px;
-  padding: 2px 10px;
-}
-
-.icon-bar
-{
-  background: darkorange;
-}
-
-li a
-{
-  color: #333;
-}
-
-.big-text
-{
-  font-size: 52px;
-  margin: 20px 0;
-  color: darkorange;
-}
-
-
-a.btn
-{
-  margin: 30px 10px;
-  width: 150px;
-  padding: 10px;
-  border-radius: 20px;
-}
-
-a.btn-first
-{
-  background-color: darkorange;
-  color: #ffff;
-}
-
-a.btn-second
-{
-  background: transparent;
-  border: 1px solid darkorange;
-  color: rgb(0, 0, 0);
-}
-
-a.btn-second:hover
-{
-  background: darkorange;
-  border: none;
-  color: #fff;
-  box-shadow: 5px 5px 10px #999;
-  transition: 0.3s;
-}
-
-a.btn-first:hover
-{
-  background: transparent;
-  border: none;
-  color: rgb(0, 0, 0);
-  box-shadow: 5px 5px 10px #999;
-  transition: 0.3s;
-}
-
-.banner-info, .banner-image
-{
-  margin: 30px 0;
-}
-
-.wrapper{
-  width: 100%;
-}
-
-.img-banner 
-{
-  display: none;
-
-}
-
-.img-me h2
-{
- width: 100%; 
-}
-
-.img-info{
-  width: 100%
-}
-
-.img-info h2 {
-  padding: 30px 30px 20px;
-  font-family: arial;
-  font-size: 50px;
-  color: #111;
-  line-height:44px;
-}
-
-.img-info p {
-  padding: 0px 30px 20px;
-  font-family: arial;
-  font-size: 16px;
-  color: #111;
-  line-height:24px;
-}
-
-.img-me 
-{
-  width: 100%;
-}
-
-
-
-
-.company-logo-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-.company-logo {
-  width: 5em;
-  height: 5em;
   background: white;
-  object-fit: cover;
-  padding: .3em;
-}
-.experience-details-item {
-  margin: 0;
-  color: #464646;
-  font-size: 100%;
-}
-.experience-items-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.experience-item {
-  border: 1px solid #343a40;
-  border-radius: 5px;
-  margin-right: .7em;
-  padding: .1em .5em;
-  font-size: 100%;
-}
-.experience-header {
-  margin-bottom: .1em;
-}
-.experience-horizontal-line {
-  margin-bottom: 2em;
 }
 
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+  float: left;
+  width: 75%;
+}
 
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
 
-@media only screen and (min-width: 768px) 
-{
-  .img-banner 
-  {
-    display: block;
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
     width: 100%;
-    padding-bottom: 30px;
-  }
-
-  .wrapper{
-    width: 600px;
-    margin: 0 auto;
-  }
-
-  .img-info h2 {
-    padding: 20px 0px 0px;
-  }
-  
-  .img-info p {
-    padding: 20px 0px 0px;
-  }
-
-  .img-me 
-  {
-    padding-top: 30px;
-  }
-}
-
-
-
-
-
-
-/* DESKTOP */
-@media screen and (min-width: 992px) {
-  .navbar-custom {
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 0;
-    border-bottom: 1.5px solid gray;
-    height: 4.1em;
-    background: #353535;
-  }
-  .navbar-nav-default {
-    height: 100%;
-    width: 20em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-  .nav-link-custom-active {
-    border-bottom: 3px solid #17E7CF;
-    height: 100%;
-  }
-  .nav-link-custom {
-    color: white;
-  }
-  #about-me-parragraph-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  #about-me-image-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  #about-me-social-logos-container {
-    margin-top: 1em;
-  }
-  #about-me-image {
-    object-fit: cover;
-    border-radius: 50%;
-    width: 14em;
-    border: 2px solid #343a40;
-    padding: .2em;
-  }
-  #contact-form {
-    width: 55%;
+    padding: 0;
   }
 }
